--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,8 @@
 attrs==21.4.0
+certifi==2022.6.15
+charset-normalizer==2.1.0
 glob2==0.7
+idna==3.3
 iniconfig==1.1.1
 Mako==1.2.1
 MarkupSafe==2.1.1
@@ -11,5 +14,7 @@ py==1.11.0
 pyparsing==3.0.9
 pytest==7.1.2
 pytest-bdd==6.0.1
+requests==2.28.1
 six==1.16.0
 tomli==2.0.1
+urllib3==1.26.10
