--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 attrs==21.4.0
 certifi==2022.6.15
 charset-normalizer==2.1.0
+freezegun==1.2.1
 glob2==0.7
 idna==3.3
 iniconfig==1.1.1
@@ -14,6 +15,7 @@ py==1.11.0
 pyparsing==3.0.9
 pytest==7.1.2
 pytest-bdd==6.0.1
+python-dateutil==2.8.2
 requests==2.28.1
 six==1.16.0
 tomli==2.0.1
